fixing spacing on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -96,9 +96,7 @@ header p {width: 567px; text-align: right;}
 #membership-details ul p.price { font-size: 22px; }
 #membership-details #additional-days { margin-top: -4em; border-top: 3px solid #fca60e; width: 61.8%; text-align: center; padding: 15px 2% 5px 2%; background: #fff; }
 
-#membership-details a.register-interest { font-style: normal; color: #666;
-	background: #eaeaea; border-radius: 3px; padding: 4px 7px;
-	text-decoration: none; margin: 8px 0 0 0;  -webkit-transition: all 0.3s ease-in; }
+#membership-details a.register-interest {background: #eaeaea; border-radius: 3px; color: #666; display: inline-block; font-style: normal; padding: 4px 7px; text-decoration: none; margin: 8px 0 0 0;  -webkit-transition: all 0.3s ease-in;}
 #membership-details li:hover a.register-interest { background: #fca60e; color: #fff; -webkit-transition: all 0.3s ease-in; }
 #membership-details li:hover a.register-interest:hover { background: #BF1504;  color: #fff; -webkit-transition: all 0.15s ease-in; }
 
@@ -137,6 +135,8 @@ header p { text-align: center;}
 
 #how-it-works h2 { color: #ffac0e; }
 #how-it-works a { color: #c91604; }
+
+#how-it-works #membership-details li {margin: 2em 0 2em 0; }
 
 #whos-here h2 { color: #c91604; }
 #whos-here ul { margin: 0 -8%; }
